[package]
name = "hexarc-tracker"
version = "1.0.0"
edition = "2021"
authors = ["Max Koverdyaev <shadeglare@gmail.com>"]
license = "MIT"

[dependencies]
actix-web = "4.3.0"
mongodb = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"
