[package]
name = "hexarc-tracker"
version = "1.0.0"
edition = "2021"
authors = ["Max Koverdyaev <shadeglare@gmail.com>"]
license = "MIT"

[dependencies]
actix-web = "4.3.1"
mongodb = "2.4.0"
serde = { version = "1.0.160", features = ["derive"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"
